# BicycleCounting

./: LICENCE  NOTICE  README.md
cad/: case.stl
model-deployment/: .gitignore  README.md
model-deployment/coco_detect/: coco_detect.cpp  idf_component.yml
model-deployment/data/ground_truth_csvs/: esp_frame206.csv  esp_frame212.csv  esp_frame215.csv  esp_frame220.csv  esp_frame223.csv  esp_frame225.csv  esp_frame241.csv  esp_frame249.csv  esp_frame250.csv  esp_frame258.csv  esp_frame259.csv  esp_frame261.csv  esp_frame262.csv  esp_frame263.csv  esp_frame264.csv  esp_frame266.csv  esp_frame271.csv  esp_frame279.csv  esp_frame282.csv  esp_frame283.csv  esp_frame290.csv  esp_frame293.csv  esp_frame302.csv  esp_frame312.csv  (+306 more)
model-deployment/model_conversion/: visualize_evaluation.py
model-training/: .gitignore  2-8-3090.sh  README.md  pyproject.toml  setup.sh
model-training/configs/: yolo11n_bike_with_augmentation_custom_loss_preprocessed.yaml  yolo11n_sample_config.yaml
model-training/datasets/combined_preprocessed/YOLO/: combined_preprocessed_yolo_dataset.yaml  labels.cache
model-training/datasets/combined_preprocessed/YOLO/labels/: esp_frame220.txt  esp_frame223.txt  esp_frame225.txt  esp_frame263.txt  esp_frame302.txt  esp_frame321.txt  esp_frame372.txt  esp_frame425.txt  esp_frame447.txt  esp_frame483.txt  esp_frame484.txt  esp_frame487.txt  esp_frame489.txt  esp_frame500.txt  rhw_2_frame100.txt  rhw_2_frame114.txt  rhw_2_frame115.txt  rhw_2_frame117.txt  rhw_2_frame130.txt  rhw_2_frame135.txt  rhw_2_frame136.txt  rhw_2_frame137.txt  rhw_2_frame140.txt  rhw_2_frame146.txt  rhw_2_frame148.txt  rhw_2_frame155.txt  rhw_2_frame157.txt  rhw_2_frame164.txt  rhw_2_frame171.txt  rhw_2_frame186.txt  rhw_2_frame194.txt  rhw_2_frame198.txt  rhw_2_frame203.txt  rhw_2_frame206.txt  rhw_2_frame216.txt  rhw_2_frame222.txt  rhw_2_frame223.txt  rhw_2_frame224.txt  rhw_2_frame252.txt  rhw_2_frame256.txt  (+44 more)
model-training/model_training/: __main__.py  cli.py  qat.py  trainer.py
model-training/model_training/core/: constants.py  schemas.py
model-training/model_training/utils/: quantization.py  validators.py
model-training/test/dataset/YOLO/: autosplit_test.txt  labels.cache
model-training/test/dataset/YOLO/labels/: esp_frame206.txt  esp_frame250.txt  esp_frame258.txt  esp_frame259.txt  esp_frame261.txt  esp_frame264.txt  esp_frame271.txt  esp_frame290.txt  esp_frame312.txt  esp_frame327.txt  esp_frame345.txt  esp_frame349.txt  esp_frame357.txt  esp_frame389.txt  esp_frame436.txt  esp_frame482.txt  esp_frame485.txt  esp_frame491.txt  esp_frame492.txt  esp_frame494.txt  esp_frame497.txt  esp_frame499.txt  esp_frame510.txt  esp_frame511.txt  esp_frame521.txt  rhw_2_frame116.txt  rhw_2_frame118.txt  rhw_2_frame121.txt  rhw_2_frame145.txt  rhw_2_frame147.txt  rhw_2_frame149.txt  rhw_2_frame150.txt  rhw_2_frame159.txt  rhw_2_frame160.txt  rhw_2_frame161.txt  rhw_2_frame165.txt  rhw_2_frame169.txt  rhw_2_frame175.txt  rhw_2_frame182.txt  rhw_2_frame183.txt  (+53 more)
model-training/test/dataset/combined/YOLO/: autosplit_train.txt  autosplit_val.txt  classes.txt  combined_yolo_dataset.yaml  labels.cache  notes.json
model-training/test/dataset/combined/YOLO/labels/: esp_frame212.txt  esp_frame215.txt  esp_frame241.txt  esp_frame249.txt  esp_frame262.txt  esp_frame266.txt  esp_frame279.txt  esp_frame282.txt  esp_frame283.txt  esp_frame293.txt  esp_frame317.txt  esp_frame318.txt  esp_frame320.txt  esp_frame353.txt  esp_frame424.txt  esp_frame438.txt  esp_frame454.txt  esp_frame462.txt  esp_frame469.txt  esp_frame493.txt  esp_frame495.txt  esp_frame498.txt  esp_frame505.txt  rhw_2_frame101.txt  rhw_2_frame102.txt  rhw_2_frame103.txt  rhw_2_frame104.txt  rhw_2_frame105.txt  rhw_2_frame111.txt  rhw_2_frame112.txt  rhw_2_frame113.txt  rhw_2_frame119.txt  rhw_2_frame120.txt  rhw_2_frame129.txt  rhw_2_frame131.txt  rhw_2_frame132.txt  rhw_2_frame133.txt  rhw_2_frame134.txt  rhw_2_frame138.txt  rhw_2_frame139.txt  (+113 more)
sketches/lorawan_send/: README.md
(+81 files in other folders)
